fix header, change color scheme, fonts, spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,84 @@
 body {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "Sans", sans-serif;
 }
 
-header {
-  padding-top: 4px;
+.navbar {
+  color: #000;
+  border-bottom: 1px lightgray solid;
+  width: 100%;
+}
+
+.navbar > * {
+  margin-left: 1vw;
+  margin-right: 1vw;
+}
+
+h1 {
+  color: #606367;
+}
+
+.nav-link {
+  margin-left: 3vw;
+  color: #606367;
+}
+
+.nav-link:hover {
+  color: #000;
+}
+
+.new-header {
   background-color: #9e0300;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-header > * {
-  margin-top: 10px;
-}
-
-header > h1 {
-  margin-left: 20px;
-  font-size: 2rem;
-  font-weight: 500;
   color: #fff7ef;
+  text-align: center;
 }
 
-header > p {
-  margin-right: 20px;
-  color: #fff7ef;
+.new-logo {
+  padding: 20px;
+  font-weight: 600;
 }
 
 .login-page {
-  margin: 20px;
+  margin: 0px;
 }
 
 .register-page {
-  margin: 20px;
+  margin: 0px;
+}
+
+.login-register--link {
+  text-align: center;
+}
+
+.form {
+  margin: auto;
+  margin-top: 20px;
+  width: 400px;
 }
 
 .today > .today--top {
   text-align: center;
-  margin: 20px;
+  width: auto;
+  margin-top: 8vh;
+  padding-bottom: 2.8vh;
+  border-bottom: 1px darkgray solid;
+}
+
+.logout-btn {
+  font-size: 1rem;
+}
+
+.logout-btn:hover {
+  cursor: pointer;
 }
 
 .card {
   font-size: 1.6rem;
-  padding: 20px;
-  border-bottom: none;
+  margin-top: 4vh;
+  padding-bottom: 2.8vh;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px darkgray solid;
+  margin-bottom: 1vh;
 }
 
 .modal {
@@ -54,6 +90,7 @@ header > p {
 }
 
 .item--header-hours {
+  display: flex;
   margin-left: 22px;
 }
 
@@ -67,7 +104,15 @@ header > p {
 }
 
 .card--time-btns * {
+  margin-right: 0px;
+}
+
+.change--time-btn {
   margin-right: 4px;
+}
+
+.card--deleteBtn {
+  margin-left: 4px;
 }
 
 .card--deleteBtn,
@@ -194,41 +239,4 @@ header > p {
   position: absolute;
   top: 5%;
   left: 5%;
-}
-.progress.blue .progress-bar {
-  border-color: hsl(217, 100%, 56%);
-}
-.progress.blue .progress-left .progress-bar {
-  animation: loading-2 1.5s linear forwards 1.8s;
-}
-
-@keyframes loading-1 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
-}
-@keyframes loading-2 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(144deg);
-    transform: rotate(144deg);
-  }
-}
-@keyframes loading-3 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(135deg);
-    transform: rotate(135deg);
-  }
 }
